Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/inference/IntersectThrownTypesTest.out
IntersectThrownTypesTest.java:21:14: compiler.err.unreported.exception.need.to.catch.or.throw: java.io.IOException
IntersectThrownTypesTest.java:25:14: compiler.err.unreported.exception.need.to.catch.or.throw: java.io.IOException
2 errors
